--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --primary: #8AA624;
+  --secondary: #DBE4C9;
+  --off-white: #FFFFF0;
+  --orange: #FEA405;
+  --test: #DCD7C9;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
